// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a cluster run lands its tree turned towards the seed, and a reorder drops it 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s2",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": "((s10,mom),(dad,s2));",
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": true,
}
`;

exports[`a cluster run lands its tree turned towards the seed, and a reorder drops it 2`] = `
{
  "regions": [
    {
      "assemblyName": "volvox",
      "end": 1000,
      "refName": "ctgA",
      "start": 0,
    },
  ],
  "settings": [
    {
      "name": "rows",
      "value": "sample",
    },
    {
      "name": "field",
      "value": "presence",
    },
  ],
}
`;

exports[`a cluster run lands its tree turned towards the seed, and a reorder drops it 3`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s2",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a color slot paints the blocks, so a colour entry paints none 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": "#00ff00",
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a colour entry paints its row, the rest the default colour 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    "#123456",
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": "#123456",
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a declared order leads and the rest sort 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s2",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a focus hides rows without recolouring the kept ones 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    "#4e79a7",
    "#f28e2c",
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": "Parents",
      "label": undefined,
      "name": "mom",
      "rowColor": "#4e79a7",
    },
    {
      "group": "Kids",
      "label": undefined,
      "name": "s10",
      "rowColor": "#f28e2c",
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a repartition keeps the arrangement, idle under rows it does not name 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "coyote",
    },
    {
      "label": undefined,
      "name": "wolf",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "coyote",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "wolf",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a row's colour entry reaches its label bar, and a group alone colours nothing 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    "#123456",
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": "Parents",
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": "#123456",
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`a run under the bands clusters each apart 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    "#e41a1c",
    "#e41a1c",
    "#377eb8",
    "#377eb8",
  ],
  "rowGroupsScale": {
    "entries": [
      {
        "color": "#e41a1c",
        "label": "Kids",
        "value": "Kids",
      },
      {
        "color": "#377eb8",
        "label": "Parents",
        "value": "Parents",
      },
    ],
    "focusesRows": true,
    "id": "rowGroups",
    "kind": "categorical",
    "title": "Row groups",
  },
  "rowTree": "((s2,s10),(dad,mom));",
  "sources": [
    {
      "group": "Kids",
      "label": undefined,
      "name": "s2",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Kids",
      "label": undefined,
      "name": "s10",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "dad",
      "rowColor": "#377eb8",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "mom",
      "rowColor": "#377eb8",
    },
  ],
  "treeDrawn": true,
}
`;

exports[`dialog edits reorder, relabel and recolour, and a reset returns to the seed 1`] = `
{
  "editableSources": [
    {
      "label": "Mother",
      "name": "mom",
    },
    {
      "label": "(no sample)",
      "name": "",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    "#0000ff",
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": "Mother",
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": "(no sample)",
      "name": "",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": "#0000ff",
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`dialog edits reorder, relabel and recolour, and a reset returns to the seed 2`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": "(no sample)",
      "name": "",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": "(no sample)",
      "name": "",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`itemRgb paints the blocks 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`rowGroups tag the rows and facet group bands them, keyed under short rows 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": "(no sample)",
      "name": "",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    "#e41a1c",
    "#e41a1c",
    "#377eb8",
    "#377eb8",
    undefined,
  ],
  "rowGroupsScale": {
    "entries": [
      {
        "color": "#e41a1c",
        "label": "Kids",
        "value": "Kids",
      },
      {
        "color": "#377eb8",
        "label": "Parents",
        "value": "Parents",
      },
    ],
    "focusesRows": true,
    "id": "rowGroups",
    "kind": "categorical",
    "title": "Row groups",
  },
  "rowTree": undefined,
  "sources": [
    {
      "group": "Kids",
      "label": undefined,
      "name": "s2",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Kids",
      "label": undefined,
      "name": "s10",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "dad",
      "rowColor": "#377eb8",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "mom",
      "rowColor": "#377eb8",
    },
    {
      "group": undefined,
      "label": "(no sample)",
      "name": "",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`sort at a column orders rows by the colour painted there 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": "(no sample)",
      "name": "",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": "(no sample)",
      "name": "",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`the bands win over a whole-cohort tree holding no clade of either 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": true,
  "rowColorStringsByIndex": [
    "#e41a1c",
    "#e41a1c",
    "#377eb8",
    "#377eb8",
  ],
  "rowGroupsScale": {
    "entries": [
      {
        "color": "#e41a1c",
        "label": "Kids",
        "value": "Kids",
      },
      {
        "color": "#377eb8",
        "label": "Parents",
        "value": "Parents",
      },
    ],
    "focusesRows": true,
    "id": "rowGroups",
    "kind": "categorical",
    "title": "Row groups",
  },
  "rowTree": "((dad,s2),(mom,s10));",
  "sources": [
    {
      "group": "Kids",
      "label": undefined,
      "name": "s2",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Kids",
      "label": undefined,
      "name": "s10",
      "rowColor": "#e41a1c",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "dad",
      "rowColor": "#377eb8",
    },
    {
      "group": "Parents",
      "label": undefined,
      "name": "mom",
      "rowColor": "#377eb8",
    },
  ],
  "treeDrawn": false,
}
`;

exports[`the rows sort, digits by magnitude, none dealt a colour 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;

exports[`the unanswered row sorts last and is labelled for the field 1`] = `
{
  "editableSources": [
    {
      "label": undefined,
      "name": "dad",
    },
    {
      "label": undefined,
      "name": "mom",
    },
    {
      "label": undefined,
      "name": "s2",
    },
    {
      "label": undefined,
      "name": "s10",
    },
    {
      "label": "(no sample)",
      "name": "",
    },
  ],
  "rowArrangementIsCustom": false,
  "rowColorStringsByIndex": [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "rowGroupsScale": undefined,
  "rowTree": undefined,
  "sources": [
    {
      "group": undefined,
      "label": undefined,
      "name": "dad",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "mom",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s2",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": undefined,
      "name": "s10",
      "rowColor": undefined,
    },
    {
      "group": undefined,
      "label": "(no sample)",
      "name": "",
      "rowColor": undefined,
    },
  ],
  "treeDrawn": false,
}
`;
